# recap

./: .env.example  .gitignore  COMPARISON_BEFORE_AFTER.md  CORRECTED_CODE_README.md  QUICK_START.md  README.md  captcha_solver.py  corrected_code.py  greenmethods_complete.py  main.py  pyproject.toml  register_with_captcha.py  requirements.txt  setup.py
.devcontainer/: devcontainer.json
