[project]
name = "recap"
version = "0.1.0"
description = "Recaptcha Token Capture using Playwright"
authors = [
    { name = "ymahmdn67-stack" }
]
dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
